// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Login > renders the login form 1`] = `
<div>
  <div
    class="blong-login p-component"
  >
    <div
      class="blong-login__top"
    >
      <div
        class="blong-login__brand"
      >
        <i
          class="blong-login__brand-icon pi pi-circle"
        />
      </div>
    </div>
    <div
      class="blong-login__card"
    >
      <p
        class="blong-login__card-heading"
      >
        Login with password
      </p>
      <form
        class="blong-login__form"
      >
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-username"
          >
            Username
          </label>
          <input
            class="p-inputtext p-component blong-login__input w-full"
            id="login-username"
            name="username"
            value=""
          />
        </div>
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-password"
          >
            Password
          </label>
          <div
            class="p-password p-component p-inputwrapper p-input-icon-right blong-login__input w-full"
          >
            <input
              class="p-inputtext p-component p-password-input w-full"
              id="login-password"
              name="password"
              type="password"
              value=""
            />
            <i
              class="pi pi-eye"
            />
          </div>
        </div>
        <button
          aria-label="Login"
          class="p-button p-component blong-login__submit"
          type="submit"
        >
          <span
            class="p-button-label p-c"
          >
            <span>
              Login
            </span>
          </span>
        </button>
      </form>
    </div>
    <div
      class="blong-login__bottom"
    />
  </div>
</div>
`;

exports[`Login > renders with custom title 1`] = `
<div>
  <div
    class="blong-login p-component"
  >
    <div
      class="blong-login__top"
    >
      <div
        class="blong-login__brand"
      >
        <i
          class="blong-login__brand-icon pi pi-circle"
        />
        <span
          class="blong-login__brand-name"
        >
          Admin Login
        </span>
      </div>
    </div>
    <div
      class="blong-login__card"
    >
      <p
        class="blong-login__card-heading"
      >
        Login with password
      </p>
      <form
        class="blong-login__form"
      >
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-username"
          >
            Username
          </label>
          <input
            class="p-inputtext p-component blong-login__input w-full"
            id="login-username"
            name="username"
            value=""
          />
        </div>
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-password"
          >
            Password
          </label>
          <div
            class="p-password p-component p-inputwrapper p-input-icon-right blong-login__input w-full"
          >
            <input
              class="p-inputtext p-component p-password-input w-full"
              id="login-password"
              name="password"
              type="password"
              value=""
            />
            <i
              class="pi pi-eye"
            />
          </div>
        </div>
        <button
          aria-label="Login"
          class="p-button p-component blong-login__submit"
          type="submit"
        >
          <span
            class="p-button-label p-c"
          >
            <span>
              Login
            </span>
          </span>
        </button>
      </form>
    </div>
    <div
      class="blong-login__bottom"
    />
  </div>
</div>
`;

exports[`Login > renders with external error 1`] = `
<div>
  <div
    class="blong-login p-component"
  >
    <div
      class="blong-login__top"
    >
      <div
        class="blong-login__brand"
      >
        <i
          class="blong-login__brand-icon pi pi-circle"
        />
      </div>
    </div>
    <div
      class="blong-login__card"
    >
      <p
        class="blong-login__card-heading"
      >
        Login with password
      </p>
      <div
        aria-live="polite"
        class="p-inline-message p-component p-inline-message-error blong-login__error"
        role="alert"
      >
        <span
          class="p-inline-message-icon pi pi-times-circle"
        />
        <span
          class="p-inline-message-text"
        >
          Invalid credentials
        </span>
      </div>
      <form
        class="blong-login__form"
      >
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-username"
          >
            Username
          </label>
          <input
            class="p-inputtext p-component blong-login__input w-full"
            id="login-username"
            name="username"
            value=""
          />
        </div>
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-password"
          >
            Password
          </label>
          <div
            class="p-password p-component p-inputwrapper p-input-icon-right blong-login__input w-full"
          >
            <input
              class="p-inputtext p-component p-password-input w-full"
              id="login-password"
              name="password"
              type="password"
              value=""
            />
            <i
              class="pi pi-eye"
            />
          </div>
        </div>
        <button
          aria-label="Login"
          class="p-button p-component blong-login__submit"
          type="submit"
        >
          <span
            class="p-button-label p-c"
          >
            <span>
              Login
            </span>
          </span>
        </button>
      </form>
    </div>
    <div
      class="blong-login__bottom"
    />
  </div>
</div>
`;

exports[`Login > renders with loading state 1`] = `
<div>
  <div
    class="blong-login p-component"
  >
    <div
      class="blong-login__top"
    >
      <div
        class="blong-login__brand"
      >
        <i
          class="blong-login__brand-icon pi pi-circle"
        />
      </div>
    </div>
    <div
      class="blong-login__card"
    >
      <p
        class="blong-login__card-heading"
      >
        Login with password
      </p>
      <form
        class="blong-login__form"
      >
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-username"
          >
            Username
          </label>
          <input
            class="p-inputtext p-component p-disabled blong-login__input w-full"
            disabled=""
            id="login-username"
            name="username"
            value=""
          />
        </div>
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-password"
          >
            Password
          </label>
          <div
            class="p-password p-component p-inputwrapper p-input-icon-right blong-login__input w-full"
          >
            <input
              class="p-inputtext p-component p-disabled p-password-input w-full"
              disabled=""
              id="login-password"
              name="password"
              type="password"
              value=""
            />
            <i
              class="pi pi-eye"
            />
          </div>
        </div>
        <button
          aria-label="Login"
          class="p-button p-component blong-login__submit p-disabled p-button-loading p-button-loading-label-only"
          disabled=""
          type="submit"
        >
          <span
            class="p-button-label p-c"
          >
            <span>
              Login
            </span>
          </span>
        </button>
      </form>
    </div>
    <div
      class="blong-login__bottom"
    />
  </div>
</div>
`;

exports[`Login > renders with register button 1`] = `
<div>
  <div
    class="blong-login p-component"
  >
    <div
      class="blong-login__register-area"
    >
      <button
        aria-label="Register"
        class="p-button p-component p-button-outlined"
      >
        <span
          class="p-button-label p-c"
        >
          <span>
            Register
          </span>
        </span>
      </button>
    </div>
    <div
      class="blong-login__top"
    >
      <div
        class="blong-login__brand"
      >
        <i
          class="blong-login__brand-icon pi pi-circle"
        />
      </div>
    </div>
    <div
      class="blong-login__card"
    >
      <p
        class="blong-login__card-heading"
      >
        Login with password
      </p>
      <form
        class="blong-login__form"
      >
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-username"
          >
            Username
          </label>
          <input
            class="p-inputtext p-component blong-login__input w-full"
            id="login-username"
            name="username"
            value=""
          />
        </div>
        <div
          class="blong-field"
        >
          <label
            class="blong-field__label"
            for="login-password"
          >
            Password
          </label>
          <div
            class="p-password p-component p-inputwrapper p-input-icon-right blong-login__input w-full"
          >
            <input
              class="p-inputtext p-component p-password-input w-full"
              id="login-password"
              name="password"
              type="password"
              value=""
            />
            <i
              class="pi pi-eye"
            />
          </div>
        </div>
        <button
          aria-label="Login"
          class="p-button p-component blong-login__submit"
          type="submit"
        >
          <span
            class="p-button-label p-c"
          >
            <span>
              Login
            </span>
          </span>
        </button>
      </form>
    </div>
    <div
      class="blong-login__bottom"
    />
  </div>
</div>
`;
